fixed AppHeader; logo and hamburger menu does not align with grid in details page anymore. Added image counter to StayEditor page and prevented to publish a stay with less then 5 images.

--- a/front-sharebnb/src/assets/styles/cmps/AppHeader.css
+++ b/front-sharebnb/src/assets/styles/cmps/AppHeader.css
@@ -24,10 +24,13 @@
   margin-bottom: 28px;
 }
 
-.app-header.is-unset .nav-bar {
+/* this setting aligned the logo and hamburger menu in appheader
+with the main grid of the details page. not needed.*/
+
+/* .app-header.is-unset .nav-bar {
   margin: 0 auto;
   grid-template-columns: max-content minmax(auto, 820px) max-content;
-}
+} */
 
 
 .app-header.is-expanded .header-main {
