--- a/front-sharebnb/src/assets/styles/cmps/stay/StayEditor.css
+++ b/front-sharebnb/src/assets/styles/cmps/stay/StayEditor.css
@@ -118,6 +118,7 @@
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
+    margin-top: 10px;
 }
 
 .thumbs li {
